--- a/vizualize-this.cabal
+++ b/vizualize-this.cabal
@@ -18,9 +18,9 @@ executable vizualize-this
   main-is:             test.hs
   build-depends:       
       base >=4.5 && <=4.8,
-      random >= 1.0,
-      time >= 1.4,
+      random >= 1.0 || ==1.1,
+      time >= 1.4 && <=1.5.0,
       pulse-simple == 0.1.14,
-      GLFW >= 0.5,
-      GLUtil >= 0.3,
-      OpenGL >= 2.8
+      GLFW >= 0.5 && < 0.5.3,
+      GLUtil >= 0.3 && <= 0.8.3,
+      OpenGL >= 2.8 && <= 2.10
